--- a/spring-demo-aop/.classpath
+++ b/spring-demo-aop/.classpath
@@ -70,5 +70,6 @@
 	<classpathentry kind="lib" path="lib/spring-websocket-5.0.2.RELEASE-javadoc.jar"/>
 	<classpathentry kind="lib" path="lib/spring-websocket-5.0.2.RELEASE-sources.jar"/>
 	<classpathentry kind="lib" path="lib/javax.annotation-api-1.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/aspectjweaver-1.8.13.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
