--- a/spring-security-demo-07-user-roles/pom.xml
+++ b/spring-security-demo-07-user-roles/pom.xml
@@ -39,6 +39,13 @@
 		    <artifactId>spring-security-config</artifactId>
 		    <version>${springsecurity.version}</version>
 		</dependency>	
+		
+		<!-- Adding Spring Security Taglibs support -->
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-taglibs</artifactId>
+		    <version>${springsecurity.version}</version>
+		</dependency>
 
 		<!-- Servlet, JSP and JSTL support -->
 		<dependency>
