--- a/03-actuator-demo/pom.xml
+++ b/03-actuator-demo/pom.xml
@@ -40,6 +40,12 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		
+		<!-- ADD SUPPORT FOR SPRING SECURITY -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
