--- a/03-actuator-demo/pom.xml
+++ b/03-actuator-demo/pom.xml
@@ -34,6 +34,7 @@
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 		
+		<!-- ADD SUPORT FOR SPRING BOOT ACTUATOR -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
